# PY_TicTacToe

./: Test.py  Tic_Tac_Toe.py  parameters.py  pyproject.toml
controller/: control.py
model/: game.py
view/: main_screen.py
