[tool.poetry]
name = "tictactoe"
version = "0.1.0"
description = ""
authors = ["Manuel Perez Tiribelli <manuelperezt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
